--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Node.js
+node_modules/
+
+# npm
+npm-debug.log
+
+# Yarn
+yarn-error.log
+
+# macOS
+.DS_Store
+
+# Editor files
+.vscode/
+.idea/
+
+# Log files
+*.log
+
+# Dependency directories
+.venv/
+.env/
 
